web-socket-server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-socket-server
  labels:
    app: web-socket-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-socket-server
  template:
    metadata:
      labels:
        app: web-socket-server
    spec:
      containers:
        - name: web-socket-server
          image: web-socket-server:v3
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: web-socket-service
  labels:
    app: web-socket-server
spec:
  type: NodePort
  ports:
    - name: app
      port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 30001
    - name: ws
      port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 30002
  selector:
    app: web-socket-server

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-socket-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # - host: your-domain.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-socket-service
                port:
                  number: 3000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: web-socket-service
                port:
                  number: 8080
